# trl-ebft

./: .gitignore  README.md  pyproject.toml  setup.py
examples/scripts/ebft/: ebft_phase1_smoke.py  ebft_trainer_smoke.py
tests/: test_ebft_feature_extractor.py  test_ebft_rewards.py  test_ebft_trainer.py
trl_ebft/: __init__.py  ebft_config.py  ebft_trainer.py  feature_extractor.py  generation_strided.py  rewards.py
